--- a/index.html
+++ b/index.html
@@ -212,18 +212,18 @@
         >
           <div class="popup-overlay absolute inset-0"></div>
           <div
-            class="w-[300px] md:w-[690px] lg:w-[800px] max-h-[75vh] h-[70vh]"
+            class="w-[300px] md:w-[690px] lg:w-[800px] max-h-[75vh] h-[70vh] absolute top-4"
           >
             <div
               class="p-4 md:p-6 rounded-lg shadow-lg z-10 relative bg-teal-200 border border-teal-300 text-teal-800"
             >
-              <h2 class="text-2xl mb-4 text-center font-semibold">
+              <h2 class="text-2xl mb-3 md:mb-4 text-center font-semibold">
                 We’d love to hear your thoughts!
               </h2>
 
               <!-- Form inside the popup -->
               <form id="myForm">
-                <div class="mb-3">
+                <div class="mb-2 md:mb-3">
                   <label for="question1" class="block text-gray-700 text-left"
                     >If you feel like it, I’d love to know your name! But no
                     pressure at all!</label
@@ -236,7 +236,7 @@
                   />
                 </div>
 
-                <div class="mb-3">
+                <div class="mb-2 md:mb-3">
                   <label for="question2" class="block text-gray-700 text-left"
                     >*Tell me something I did that you didn't like, but didn't
                     tell me.</label
@@ -249,7 +249,7 @@
                     required
                   ></textarea>
                 </div>
-                <div class="mb-3">
+                <div class="mb-2 md:mb-3">
                   <label for="question3" class="block text-gray-700 text-left"
                     >*Tell me something you really think I should change.</label
                   >
@@ -261,7 +261,7 @@
                     required
                   ></textarea>
                 </div>
-                <div class="mb-3">
+                <div class="mb-2 md:mb-3">
                   <label for="question4" class="block text-gray-700 text-left"
                     >*What's one question you've always wanted to ask me but
                     never did?</label
