logo href added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <nav
       class="p-2 bg-emerald-900 flex justify-between items-center fixed z-50 top-0 left-0 w-full"
     >
-      <a class="w-12 p-1 m-0 md:ml-2 rounded-lg bg-emerald-600" href="/"
+      <a class="w-12 p-1 m-0 md:ml-2 rounded-lg bg-emerald-600" href="#myself"
         ><img src="./Shani.png" alt="logo" class="w-full h-full"
       /></a>
       <div class="md:hidden">
